--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "org.slf4j:slf4j-simple:1.7.36",
-            'io.qameta.allure:allure-selenide:2.17.3'
+            "io.qameta.allure:allure-selenide:2.17.3"
     )
 }
 
@@ -35,6 +35,13 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
