--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,12 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.3.5",
+            "com.codeborne:selenide:6.4.0",
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "org.slf4j:slf4j-simple:1.7.36",
-            "io.qameta.allure:allure-selenide:2.17.3"
+            "io.qameta.allure:allure-selenide:2.17.3",
+            "org.aeonbits.owner:owner:1.0.12"
     )
 }
 
